apps/argocd/uk-lon-1-mgmt/argocd-uk-lon-1-mgmt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-uk-lon-1-mgmt
  namespace: argocd
  annotations:
    tailscale.com/hostname: "argocd-uk-lon-1-mgmt"
    tailscale.com/tags: "tag:uk-lon-1-mgmt,tag:admin-app"
    external-dns.alpha.kubernetes.io/hostname: argocd.mgmt.uk-lon-1.morrislan.net.
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
