apps/argocd/uk-lon-1-mgmt/argocd-uk-lon-1-mgmt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-uk-lon-1-mgmt
  namespace: argocd
  annotations:
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    tailscale.com/tags: "tag:uk-lon-1-mgmt,tag:admin-app"
spec:
  ingressClassName: tailscale
  rules:
    - host: argocd-uk-lon-1-mgmt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argocd-uk-lon-1-mgmt
      secretName: argocd-server-tls # as expected by argocd-server
